--- a/pkg/numbers/config/seed/destination_definitions.yaml
+++ b/pkg/numbers/config/seed/destination_definitions.yaml
@@ -1,6 +1,6 @@
-- name: NumbersProtocol
+- name: NIT
   uid: 70d8664a-d512-4517-a5e8-5d4da81756a7
-  dockerRepository: instill-ai/destination-numbers
+  dockerRepository: instill-ai/destination-nit
   dockerImageTag: ""
-  documentationUrl: https://www.instill.tech/docs/destination-connectors/numbers-protocol
+  documentationUrl: hhttps://docs.numbersprotocol.io/introduction/numbers-protocol
   releaseStage: generally_available
